Trying to fix flicker on search

--- a/website/front-end/src/index.css
+++ b/website/front-end/src/index.css
@@ -15,5 +15,5 @@ a:hover {
 }
 
 body {
-  margin: 5px;
+  margin: 10px;
 }
